# ctrust

./: .gitignore  Cargo.toml  ctrust_config.yaml
src/: error.rs  lib.rs  prelude.rs  proj_type.rs
src/ctrust/: mod.rs  types.rs
src/ctrust/parse/: c_parse.rs  carg_parse.rs  cfunc_parse.rs  cret_parse.rs  mod.rs
src/parse/: c_parse.rs  mod.rs  types.rs
