[package]
name = "ctrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.9.3"
thiserror = "1.0.38"
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.25"

[dev-dependencies]
anyhow = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
